--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Attack FD25 – Profi panel vytápění</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdn.jsdelivr.net/…pt>
 
 <style>
 body {
@@ -14,265 +14,175 @@ body {
   margin:0;
   padding:20px;
 }
-h1 { margin-bottom:4px; }
-small { color:#94a3b8; }
+h1 { margin-bottom:5px; }
+.small { opacity:0.7; font-size:0.9rem; }
+
+.section-title {
+  margin-top:30px;
+  margin-bottom:10px;
+  font-size:1.2rem;
+}
 
 .grid {
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-  gap:14px;
+  gap:16px;
 }
 .card {
   background:#020617;
-  border-radius:14px;
-  padding:14px;
-  box-shadow:0 8px 20px rgba(0,0,0,.4);
+  border-radius:16px;
+  padding:16px;
+  box-shadow:0 10px 25px rgba(0,0,0,0.4);
 }
 .value {
-  font-size:2rem;
+  font-size:2.1rem;
   font-weight:bold;
 }
-.unit { opacity:.7; }
+.unit { opacity:0.7; }
 
-input, select {
-  width:100%;
-  padding:6px;
-  margin-top:6px;
-  background:#020617;
-  color:#e5e7eb;
-  border:1px solid #334155;
-  border-radius:6px;
-}
-
-.section { margin-top:22px; }
-canvas { margin-top:12px; }
+canvas { margin-top:10px; }
 </style>
 </head>
 
 <body>
 
-<h1>🔥 Attack FD25 – Profi panel vytápění</h1>
-<small>Poslední aktualizace: <span id="lastUpdate">–</span></small>
+<h1>🔥 Attack FD25 – Rodinný dům</h1>
+<div class="small">
+  Automatický kotel FD25 · bojler 125 l Dražice<br>
+  ⏱️ Poslední aktualizace: <span id="lastUpdate">–</span>
+</div>
 
 <!-- TEPLOTY -->
-<div class="section grid">
+<div class="section-title">🌡️ Teploty</div>
+<div class="grid">
   <div class="card"><div>Kotel</div><div class="value" id="f5">–</div><div class="unit">°C</div></div>
-  <div class="card"><div>Výstup</div><div class="value" id="f2">–</div><div class="unit">°C</div></div>
+  <div class="card"><div>Výstup z kotle</div><div class="value" id="f2">–</div><div class="unit">°C</div></div>
   <div class="card"><div>Zpátečka</div><div class="value" id="f1">–</div><div class="unit">°C</div></div>
-  <div class="card"><div>ΔT</div><div class="value" id="dt">–</div><div class="unit">°C</div></div>
+  <div class="card"><div>ΔT</div><div class="value" id="deltaT">–</div><div class="unit">°C</div></div>
   <div class="card"><div>TUV</div><div class="value" id="f3">–</div><div class="unit">°C</div></div>
   <div class="card"><div>Venkovní</div><div class="value" id="f4">–</div><div class="unit">°C</div></div>
 </div>
 
-<!-- CERPADLO -->
-<div class="section grid">
+<!-- ENERGIE -->
+<div class="section-title">🚿 Spotřeba TUV</div>
+<div class="grid">
   <div class="card">
-    <div>Příkon čerpadla (W)</div>
-    <input id="pumpPower" type="number">
+    <div>Denní energie TUV</div>
+    <div class="value" id="energyDay">–</div>
+    <div class="unit">kWh</div>
   </div>
-  <div class="card">
-    <div>Režim čerpadla</div>
-    <select id="pumpMode">
-      <option value="auto">AUTOADAPT</option>
-      <option value="cp">Konstantní tlak</option>
-      <option value="cs">Konstantní otáčky</option>
-    </select>
-  </div>
-  <div class="card">
-    <div>Odhad průtoku</div>
-    <div class="value" id="flow">–</div>
-    <div class="unit">l/h</div>
-  </div>
-  <div class="card">
-    <div>Okamžitý výkon topení</div>
-    <div class="value" id="powerHeat">–</div>
-    <div class="unit">kW</div>
-  </div>
-</div>
 
-<!-- SPOTREBA -->
-<div class="section grid">
   <div class="card">
-    <div>Denní energie – topení</div>
-    <div class="value" id="dayHeat">0.0</div>
-    <div class="unit">kWh</div>
-  </div>
-  <div class="card">
-    <div>Měsíční energie – topení</div>
-    <div class="value" id="monthHeat">0</div>
-    <div class="unit">kWh</div>
-  </div>
-  <div class="card">
-    <div>Uhlí – topení (měsíc)</div>
-    <div class="value" id="coalHeat">0</div>
+    <div>Denní uhlí (Bílina)</div>
+    <div class="value" id="coalDay">–</div>
     <div class="unit">kg</div>
   </div>
+
   <div class="card">
-    <div>Energie TUV – tento měsíc<br><small id="tuvFrom">od –</small></div>
-    <div class="value" id="monthTUV">0.0</div>
+    <div>Měsíční energie TUV<br><span class="small">(od 1. dne)</span></div>
+    <div class="value" id="energyMonth">–</div>
     <div class="unit">kWh</div>
+  </div>
+
+  <div class="card">
+    <div>Měsíční uhlí (Bílina)</div>
+    <div class="value" id="coalMonth">–</div>
+    <div class="unit">kg</div>
   </div>
 </div>
 
 <!-- GRAF -->
-<div class="section card">
-  <h3>📈 Teploty – posledních 24 h</h3>
+<div class="section-title">📈 Teploty – posledních 24 h</div>
+<div class="card">
   <canvas id="chart"></canvas>
 </div>
 
 <script>
 const CHANNEL_ID = 231269;
-const RESULTS = 96;
-const COAL_PER_KWH = 0.27;
-const BOILER_L = 125;
-const COLD_WATER = 10;
-const HOT_WATER = 50;
+const BOILER_VOLUME = 125;
+const COAL_KG_PER_KWH = 0.27;
+const RESULTS_24H = 96;
 
-let lastCalcTime = Date.now();
+let chart;
 
-let dailyHeat = Number(localStorage.getItem('dailyHeat')) || 0;
-let dailyDate = localStorage.getItem('dailyDate') || new Date().toDateString();
+function r1(v){ return (!isNaN(v) && v!==null) ? Number(v).toFixed(1) : '–'; }
 
-let lastTUV = null;
-let monthlyHeat = 0;
-let monthlyTUV = Number(localStorage.getItem('monthlyTUV')) || 0;
+async function loadData(){
 
-let chart = null;
-
-const chartEl = document.getElementById('chart');
-
-function flowFromPump(power, mode) {
-  if (!power || power <= 0) return 0;
-
-  // maximální fyzický průtok čerpadla (m3/h)
-  const MAX_FLOW = 2400; // l/h = 2.4 m3/h
-  const MIN_FLOW = 300;  // l/h – praktické minimum
-  const MAX_POWER = 45;  // W – typické max čerpadla
-
-  let modeFactor = 1;
-  if (mode === 'cp') modeFactor = 0.95;
-  if (mode === 'cs') modeFactor = 1.05;
-
-  // normalizace výkonu 0–1
-  let p = Math.min(power / MAX_POWER, 1);
-
-  // nelineární charakteristika čerpadla
-  let flow = MIN_FLOW + (MAX_FLOW - MIN_FLOW) * Math.sqrt(p);
-
-  flow *= modeFactor;
-
-  // fyzický limit
-  return Math.min(flow, MAX_FLOW);
-}
-
-
-pumpPower.value = localStorage.getItem('pumpPower') || 15;
-pumpMode.value = localStorage.getItem('pumpMode') || 'auto';
-pumpPower.onchange = () => localStorage.setItem('pumpPower', pumpPower.value);
-pumpMode.onchange = () => localStorage.setItem('pumpMode', pumpMode.value);
-
-if (!localStorage.getItem('tuvStart')) {
-  localStorage.setItem('tuvStart', new Date().toLocaleDateString('cs-CZ'));
-}
-document.getElementById('tuvFrom').textContent =
-  "od " + localStorage.getItem('tuvStart');
-
-async function loadData() {
-  const res = await fetch(`https://api.thingspeak.com/channels/${CHANNEL_ID}/feeds.json?results=${RESULTS}`);
-  const data = await res.json();
-  const feeds = data.feeds;
-  if (!feeds.length) return;
-
-  const last = feeds.at(-1);
-  const time = new Date(last.created_at);
-// reset denní energie při změně dne
-const today = time.toDateString();
-if (dailyDate !== today) {
-  dailyHeat = 0;
-  dailyDate = today;
-  localStorage.setItem('dailyDate', dailyDate);
-}
+  /* ==== 24 h data ==== */
+  const r24 = await fetch(`https://api.thingspeak.com/…4H}`);
+  const d24 = await r24.json();
+  const f24 = d24.feeds;
+  const last = f24.at(-1);
 
   document.getElementById('lastUpdate').textContent =
-    time.toLocaleString('cs-CZ');
+    new Date(last.created_at).toLocaleString('cs-CZ');
 
-  function val(n) {
-    const v = parseFloat(last[`field${n}`]);
-    return isNaN(v) ? null : v;
-  }
+  ['1','2','3','4','5'].forEach(i=>{
+    document.getElementById('f'+i).textContent = r1(last['field'+i]);
+  });
 
-  const f1 = val(1), f2 = val(2), f3 = val(3), f4 = val(4), f5 = val(5);
-  if (f1==null || f2==null) return;
+  document.getElementById('deltaT').textContent =
+    r1(last.field2 - last.field1);
 
-  document.getElementById('f1').textContent = f1.toFixed(1);
-  document.getElementById('f2').textContent = f2.toFixed(1);
-  if (f3!=null) document.getElementById('f3').textContent = f3.toFixed(1);
-  if (f4!=null) document.getElementById('f4').textContent = f4.toFixed(1);
-  if (f5!=null) document.getElementById('f5').textContent = f5.toFixed(1);
+  /* ==== CELÁ HISTORIE (pro měsíc) ==== */
+  const rall = await fetch(`https://api.thingspeak.com/…000`);
+  const all = (await rall.json()).feeds;
 
-  const dt = f2 - f1;
-  document.getElementById('dt').textContent = dt.toFixed(1);
+  const now = new Date();
+  const startDay = new Date(now); startDay.setHours(0,0,0,0);
+  const startMonth = new Date(now.getFullYear(), now.getMonth(), 1);
 
-  const flow = flowFromPump(+pumpPower.value, pumpMode.value);
-  document.getElementById('flow').textContent = Math.round(flow);
+  let eDay = 0, eMonth = 0;
 
-  const powerHeat = 0.00116 * flow * dt;
-  document.getElementById('powerHeat').textContent = powerHeat.toFixed(1);
+  for(let i=1;i<all.length;i++){
+    const p = all[i-1];
+    const c = all[i];
+    const t = new Date(c.created_at);
+    const dT = c.field3 - p.field3;
 
- const now = Date.now();
-const hours = (now - lastCalcTime) / 3600000;
-
-if (hours > 0 && hours < 0.5) {
-  dailyHeat += powerHeat * hours;
-  monthlyHeat += powerHeat * hours;
-}
-
-lastCalcTime = now;
-localStorage.setItem('dailyHeat', dailyHeat);
-
-
-  // TUV výpočet
-  if (lastTUV !== null && f3 !== null) {
-    const dT = f3 - lastTUV;
-    if (dT > 5) {
-      const e = BOILER_L * dT * 0.001163;
-      monthlyTUV += e;
-      localStorage.setItem('monthlyTUV', monthlyTUV);
+    if(dT > 0){
+      const e = BOILER_VOLUME * dT * 0.001163;
+      if(t >= startDay)   eDay   += e;
+      if(t >= startMonth) eMonth += e;
     }
   }
-  lastTUV = f3;
 
-  document.getElementById('dayHeat').textContent = dailyHeat.toFixed(1);
-  document.getElementById('monthHeat').textContent = monthlyHeat.toFixed(0);
-  document.getElementById('coalHeat').textContent =
-    (monthlyHeat * COAL_PER_KWH).toFixed(0);
-  document.getElementById('monthTUV').textContent = monthlyTUV.toFixed(1);
+  document.getElementById('energyDay').textContent = r1(eDay);
+  document.getElementById('coalDay').textContent   = r1(eDay * COAL_KG_PER_KWH);
+  document.getElementById('energyMonth').textContent = r1(eMonth);
+  document.getElementById('coalMonth').textContent   = r1(eMonth * COAL_KG_PER_KWH);
 
-  drawChart(feeds);
-}
+  /* ==== GRAF ==== */
+  const labels = f24.map(f =>
+    new Date(f.created_at).toLocaleTimeString('cs-CZ',{hour:'2-digit',minute:'2-digit'})
+  );
 
-function drawChart(feeds) {
-  const labels = feeds.map(f =>
-    new Date(f.created_at).toLocaleTimeString('cs-CZ',{hour:'2-digit',minute:'2-digit'}));
+  const cfg = [
+    ['Kotel','field5'],
+    ['Výstup','field2'],
+    ['Zpátečka','field1'],
+    ['TUV','field3'],
+    ['Venkovní','field4']
+  ];
 
-  const datasets = [
-    {label:'Výstup', field:'field2'},
-    {label:'Zpátečka', field:'field1'},
-    {label:'TUV', field:'field3'}
-  ].map(c => ({
-    label:c.label,
-    data:feeds.map(f => f[c.field]),
+  const datasets = cfg.map(c=>({
+    label:c[0],
+    data:f24.map(f=>f[c[1]]),
     borderWidth:2,
     tension:0.3
   }));
 
-  if (chart) chart.destroy();
-  chart = new Chart(chartEl, {
+  if(chart) chart.destroy();
+  chart = new Chart(document.getElementById('chart'),{
     type:'line',
     data:{labels,datasets},
     options:{
       plugins:{legend:{labels:{color:'#e5e7eb'}}},
-      scales:{x:{ticks:{color:'#94a3b8'}},y:{ticks:{color:'#94a3b8'}}}
+      scales:{
+        x:{ticks:{color:'#94a3b8'}},
+        y:{ticks:{color:'#94a3b8'}}
+      }
     }
   });
 }
