--- a/index.html
+++ b/index.html
@@ -132,6 +132,23 @@ const clock = document.getElementById("clock");
 const kg10min = document.getElementById("kg10min");
 const priceKg = document.getElementById("priceKg");
 
+const tKotel = document.getElementById("tKotel");
+const tZpet = document.getElementById("tZpet");
+const tPodavac = document.getElementById("tPodavac");
+const tBojler = document.getElementById("tBojler");
+const tVenku = document.getElementById("tVenku");
+const deltaT = document.getElementById("deltaT");
+const feedTotal = document.getElementById("feedTotal");
+const kgHour = document.getElementById("kgHour");
+const kgDay = document.getElementById("kgDay");
+const kgMonth = document.getElementById("kgMonth");
+const costDay = document.getElementById("costDay");
+const costMonth = document.getElementById("costMonth");
+const energyHour = document.getElementById("energyHour");
+const historyBtn = document.getElementById("historyBtn");
+const historyBox = document.getElementById("historyBox");
+const historyTable = document.getElementById("historyTable");
+
 kg10min.value = localStorage.kg10min || 2.5;
 priceKg.value = localStorage.priceKg || 6.2;
 
@@ -151,95 +168,93 @@ function secToKg(sec){
   return Math.max(0,(sec/600)*(+kg10min.value||2.5));
 }
 
-function todayStartISO(){
+function todayStartUTC(){
   const d = new Date();
   d.setHours(0,0,0,0);
-  const utc = new Date(d.getTime() - d.getTimezoneOffset()*60000);
-  return utc.toISOString();
+  return new Date(d.getTime() - d.getTimezoneOffset()*60000).toISOString();
 }
 
-async function fetchFeeds(p){
+async function fetchFeeds(params){
   try{
-    const r = await fetch(
-      `https://api.thingspeak.com/channels/${CHANNEL}/feeds.json?${p}`
-    );
-    if(!r.ok) throw "";
-    return (await r.json()).feeds || [];
+    const res = await fetch(`https://api.thingspeak.com/channels/${CHANNEL}/feeds.json?${params}`);
+    if(!res.ok) throw "";
+    return (await res.json()).feeds || [];
   }catch{
     return [];
   }
 }
 
 async function updateCurrent(){
-  const f = (await fetchFeeds("results=1"))[0];
-  if(!f) return;
+  const feeds = await fetchFeeds("results=1");
+  if(!feeds.length) return;
+  const f = feeds[0];
 
-  const tK = +f.field5||0;
-  const tZ = +f.field1||0;
-
-  tKotel.textContent = tK.toFixed(1)+" °C";
-  tZpet.textContent = tZ.toFixed(1)+" °C";
+  tKotel.textContent = (+f.field5||0).toFixed(1)+" °C";
+  tZpet.textContent = (+f.field1||0).toFixed(1)+" °C";
   tPodavac.textContent = (+f.field2||0).toFixed(1)+" °C";
   tBojler.textContent = (+f.field3||0).toFixed(1)+" °C";
   tVenku.textContent = (+f.field4||0).toFixed(1)+" °C";
-  deltaT.textContent = (tK-tZ).toFixed(1)+" °C";
+  deltaT.textContent = ((+f.field5||0)-(+f.field1||0)).toFixed(1)+" °C";
   feedTotal.textContent = secToHMS(+f.field8||0);
 }
 
 async function updateHour(){
   const feeds = await fetchFeeds("minutes=60&results=8000");
   if(feeds.length<2) return;
-  const kg = secToKg(
-    (+feeds.at(-1).field8||0)-(+feeds[0].field8||0)
-  );
+  const kg = secToKg((+feeds.at(-1).field8||0)-(+feeds[0].field8||0));
   kgHour.textContent = kg.toFixed(2)+" kg";
   energyHour.textContent = (kg*ENERGY*EFF).toFixed(1)+" kWh";
 }
 
 async function updateDay(){
-  const feeds = await fetchFeeds(
-    "start="+todayStartISO()+"&results=8000"
-  );
+  const feeds = await fetchFeeds(`start=${todayStartUTC()}&results=8000`);
   if(feeds.length<2) return;
-
-  const kg = secToKg(
-    (+feeds.at(-1).field8||0)-(+feeds[0].field8||0)
-  );
-
+  feeds.sort((a,b)=>new Date(a.created_at)-new Date(b.created_at));
+  const kg = secToKg((+feeds.at(-1).field8||0)-(+feeds[0].field8||0));
   kgDay.textContent = kg.toFixed(2)+" kg";
-  costDay.textContent =
-    (kg*(+priceKg.value||6.2)).toFixed(0)+" Kč";
+  costDay.textContent = (kg*(+priceKg.value||6.2)).toFixed(0)+" Kč";
 }
 
 async function updateMonth(){
   let totalKg = 0;
   const price = +priceKg.value||6.2;
   const now = new Date();
-
   for(let i=0;i<now.getDate();i++){
     const d1 = new Date();
     d1.setDate(d1.getDate()-i);
     d1.setHours(0,0,0,0);
     const d2 = new Date(d1);
     d2.setDate(d2.getDate()+1);
-
-    const feeds = await fetchFeeds(
-      `start=${d1.toISOString()}&end=${d2.toISOString()}&results=8000`
-    );
-
+    const feeds = await fetchFeeds(`start=${d1.toISOString()}&end=${d2.toISOString()}&results=8000`);
     if(feeds.length>1){
-      totalKg += secToKg(
-        (+feeds.at(-1).field8||0)-(+feeds[0].field8||0)
-      );
+      totalKg += secToKg((+feeds.at(-1).field8||0)-(+feeds[0].field8||0));
     }
   }
-
   kgMonth.textContent = totalKg.toFixed(1)+" kg";
   costMonth.textContent = (totalKg*price).toFixed(0)+" Kč";
 }
 
-kg10min.oninput=()=>{localStorage.kg10min=kg10min.value;updateHour();updateDay();updateMonth();}
-priceKg.oninput=()=>{localStorage.priceKg=priceKg.value;updateDay();updateMonth();}
+historyBtn.onclick = async ()=>{
+  historyBox.style.display = historyBox.style.display==="none"?"block":"none";
+  historyTable.innerHTML = "";
+  const price = +priceKg.value||6.2;
+  for(let i=0;i<14;i++){
+    const d1 = new Date();
+    d1.setDate(d1.getDate()-i);
+    d1.setHours(0,0,0,0);
+    const d2 = new Date(d1);
+    d2.setDate(d2.getDate()+1);
+    const feeds = await fetchFeeds(`start=${d1.toISOString()}&end=${d2.toISOString()}&results=8000`);
+    if(feeds.length>1){
+      feeds.sort((a,b)=>new Date(a.created_at)-new Date(b.created_at));
+      const kg = secToKg((+feeds.at(-1).field8||0)-(+feeds[0].field8||0));
+      historyTable.innerHTML += `<tr><td>${d1.toLocaleDateString("cs-CZ")}</td><td>${kg.toFixed(2)}</td><td>${(kg*price).toFixed(0)}</td></tr>`;
+    }
+  }
+};
+
+kg10min.oninput = ()=>{localStorage.kg10min=kg10min.value;updateHour();updateDay();updateMonth();}
+priceKg.oninput = ()=>{localStorage.priceKg=priceKg.value;updateDay();updateMonth();}
 
 updateClock();
 updateCurrent();
