--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ th{background:#eee}
 
 <header>
   <div id="clock"></div>
-  <div>Attack FD 25 – panel kotelny</div>
+  <div>Attack FD 25 – Profi panel</div>
 </header>
 
 <main>
@@ -68,7 +68,7 @@ th{background:#eee}
   <div class="card"><h2>🔥 Kotel</h2><div class="value" id="tKotel">--</div></div>
   <div class="card"><h2>↩️ Zpátečka</h2><div class="value blue" id="tZpet">--</div></div>
   <div class="card"><h2>🌡️ ΔT</h2><div class="value orange" id="deltaT">--</div></div>
-  <div class="card"><h2>⚡ Energie (1 h)</h2><div class="value green" id="energyHour">--</div></div>
+  <div class="card"><h2>⚡ Energie (1 h)</h2><div class="value green" id="powerKWbig">--</div></div>
   <div class="card"><h2>⚙️ Podavač</h2><div class="value" id="tPodavac">--</div></div>
   <div class="card"><h2>💧 Bojler</h2><div class="value" id="tBojler">--</div></div>
   <div class="card"><h2>🌡️ Venku</h2><div class="value" id="tVenku">--</div></div>
@@ -125,29 +125,8 @@ th{background:#eee}
 
 <script>
 const CHANNEL = 231269;
-const ENERGY = 4.8;
+const ENERGY = 4.8; // kWh / kg
 const EFF = 0.75;
-
-const clock = document.getElementById("clock");
-const kg10min = document.getElementById("kg10min");
-const priceKg = document.getElementById("priceKg");
-
-const tKotel = document.getElementById("tKotel");
-const tZpet = document.getElementById("tZpet");
-const tPodavac = document.getElementById("tPodavac");
-const tBojler = document.getElementById("tBojler");
-const tVenku = document.getElementById("tVenku");
-const deltaT = document.getElementById("deltaT");
-const feedTotal = document.getElementById("feedTotal");
-const kgHour = document.getElementById("kgHour");
-const kgDay = document.getElementById("kgDay");
-const kgMonth = document.getElementById("kgMonth");
-const costDay = document.getElementById("costDay");
-const costMonth = document.getElementById("costMonth");
-const energyHour = document.getElementById("energyHour");
-const historyBtn = document.getElementById("historyBtn");
-const historyBox = document.getElementById("historyBox");
-const historyTable = document.getElementById("historyTable");
 
 kg10min.value = localStorage.kg10min || 2.5;
 priceKg.value = localStorage.priceKg || 6.2;
@@ -156,6 +135,7 @@ function updateClock(){
   clock.textContent = new Date().toLocaleString("cs-CZ");
 }
 
+/* ===== FORMAT SEKUND NA HH:MM:SS ===== */
 function secToHMS(sec){
   sec = Math.max(0, Math.floor(sec));
   const h = Math.floor(sec / 3600);
@@ -168,93 +148,128 @@ function secToKg(sec){
   return Math.max(0,(sec/600)*(+kg10min.value||2.5));
 }
 
-function todayStartUTC(){
-  const d = new Date();
+function todayStartISO(){
+  const d=new Date();
   d.setHours(0,0,0,0);
-  return new Date(d.getTime() - d.getTimezoneOffset()*60000).toISOString();
+  return d.toISOString();
 }
 
-async function fetchFeeds(params){
+function monthStartISO(){
+  const d=new Date();
+  d.setDate(1);
+  d.setHours(0,0,0,0);
+  return d.toISOString();
+}
+
+async function fetchFeeds(p){
   try{
-    const res = await fetch(`https://api.thingspeak.com/channels/${CHANNEL}/feeds.json?${params}`);
-    if(!res.ok) throw "";
-    return (await res.json()).feeds || [];
-  }catch{
+    const r=await fetch(
+      `https://api.thingspeak.com/channels/${CHANNEL}/feeds.json?${p}`
+    );
+    return (await r.json()).feeds || [];
+  }catch(e){
     return [];
   }
 }
 
 async function updateCurrent(){
-  const feeds = await fetchFeeds("results=1");
-  if(!feeds.length) return;
-  const f = feeds[0];
+  const cur=await fetchFeeds("results=1");
+  if(!cur.length) return;
+  const f=cur[0];
 
-  tKotel.textContent = (+f.field5||0).toFixed(1)+" °C";
-  tZpet.textContent = (+f.field1||0).toFixed(1)+" °C";
-  tPodavac.textContent = (+f.field2||0).toFixed(1)+" °C";
-  tBojler.textContent = (+f.field3||0).toFixed(1)+" °C";
-  tVenku.textContent = (+f.field4||0).toFixed(1)+" °C";
-  deltaT.textContent = ((+f.field5||0)-(+f.field1||0)).toFixed(1)+" °C";
-  feedTotal.textContent = secToHMS(+f.field8||0);
+  const tK=+f.field5||0;
+  const tZ=+f.field1||0;
+
+  tKotel.textContent=tK.toFixed(1)+" °C";
+  tZpet.textContent=tZ.toFixed(1)+" °C";
+  tPodavac.textContent=(+f.field2||0).toFixed(1)+" °C";
+  tBojler.textContent=(+f.field3||0).toFixed(1)+" °C";
+  tVenku.textContent=(+f.field4||0).toFixed(1)+" °C";
+
+  deltaT.textContent=(tK-tZ).toFixed(1)+" °C";
+
+  const totalSec = +f.field8 || 0;
+  feedTotal.textContent = secToHMS(totalSec);
 }
 
 async function updateHour(){
-  const feeds = await fetchFeeds("minutes=60&results=8000");
+  const feeds=await fetchFeeds("minutes=60&results=120");
   if(feeds.length<2) return;
-  const kg = secToKg((+feeds.at(-1).field8||0)-(+feeds[0].field8||0));
-  kgHour.textContent = kg.toFixed(2)+" kg";
-  energyHour.textContent = (kg*ENERGY*EFF).toFixed(1)+" kWh";
+
+  const kg=secToKg(
+    feeds.at(-1).field8 - feeds[0].field8
+  );
+
+  kgHour.textContent=kg.toFixed(2)+" kg";
+  powerKWbig.textContent=(kg*ENERGY*EFF).toFixed(1)+" kWh";
 }
 
 async function updateDay(){
-  const feeds = await fetchFeeds(`start=${todayStartUTC()}&results=8000`);
+  const feeds=await fetchFeeds("start="+todayStartISO()+"&results=2000");
   if(feeds.length<2) return;
-  feeds.sort((a,b)=>new Date(a.created_at)-new Date(b.created_at));
-  const kg = secToKg((+feeds.at(-1).field8||0)-(+feeds[0].field8||0));
-  kgDay.textContent = kg.toFixed(2)+" kg";
-  costDay.textContent = (kg*(+priceKg.value||6.2)).toFixed(0)+" Kč";
+
+  const kg=secToKg(
+    feeds.at(-1).field8 - feeds[0].field8
+  );
+
+  kgDay.textContent=kg.toFixed(2)+" kg";
+  costDay.textContent=(kg*(+priceKg.value||6.2)).toFixed(0)+" Kč";
 }
 
 async function updateMonth(){
-  let totalKg = 0;
-  const price = +priceKg.value||6.2;
-  const now = new Date();
-  for(let i=0;i<now.getDate();i++){
-    const d1 = new Date();
-    d1.setDate(d1.getDate()-i);
-    d1.setHours(0,0,0,0);
-    const d2 = new Date(d1);
-    d2.setDate(d2.getDate()+1);
-    const feeds = await fetchFeeds(`start=${d1.toISOString()}&end=${d2.toISOString()}&results=8000`);
-    if(feeds.length>1){
-      totalKg += secToKg((+feeds.at(-1).field8||0)-(+feeds[0].field8||0));
-    }
-  }
-  kgMonth.textContent = totalKg.toFixed(1)+" kg";
-  costMonth.textContent = (totalKg*price).toFixed(0)+" Kč";
+  const feeds=await fetchFeeds("start="+monthStartISO()+"&results=3000");
+  if(feeds.length<2) return;
+
+  const kg=secToKg(
+    feeds.at(-1).field8 - feeds[0].field8
+  );
+
+  kgMonth.textContent=kg.toFixed(0)+" kg";
+  costMonth.textContent=(kg*(+priceKg.value||6.2)).toFixed(0)+" Kč";
 }
 
-historyBtn.onclick = async ()=>{
-  historyBox.style.display = historyBox.style.display==="none"?"block":"none";
-  historyTable.innerHTML = "";
-  const price = +priceKg.value||6.2;
-  for(let i=0;i<14;i++){
-    const d1 = new Date();
+historyBtn.onclick = async () => {
+  historyBox.style.display =
+    historyBox.style.display === "none" ? "block" : "none";
+
+  historyTable.innerHTML="";
+  const days=14;
+  const price=+priceKg.value||6.2;
+
+  for(let i=0;i<days;i++){
+    const d1=new Date();
     d1.setDate(d1.getDate()-i);
     d1.setHours(0,0,0,0);
-    const d2 = new Date(d1);
+    const d2=new Date(d1);
     d2.setDate(d2.getDate()+1);
-    const feeds = await fetchFeeds(`start=${d1.toISOString()}&end=${d2.toISOString()}&results=8000`);
+
+    const feeds=await fetchFeeds(
+      `start=${d1.toISOString()}&end=${d2.toISOString()}&results=2000`
+    );
+
     if(feeds.length>1){
-      feeds.sort((a,b)=>new Date(a.created_at)-new Date(b.created_at));
-      const kg = secToKg((+feeds.at(-1).field8||0)-(+feeds[0].field8||0));
-      historyTable.innerHTML += `<tr><td>${d1.toLocaleDateString("cs-CZ")}</td><td>${kg.toFixed(2)}</td><td>${(kg*price).toFixed(0)}</td></tr>`;
+      const kg=secToKg(
+        feeds.at(-1).field8 - feeds[0].field8
+      );
+
+      historyTable.innerHTML+=`
+        <tr>
+          <td>${d1.toLocaleDateString("cs-CZ")}</td>
+          <td>${kg.toFixed(2)}</td>
+          <td>${(kg*price).toFixed(0)}</td>
+        </tr>`;
     }
   }
 };
 
-kg10min.oninput = ()=>{localStorage.kg10min=kg10min.value;updateHour();updateDay();updateMonth();}
-priceKg.oninput = ()=>{localStorage.priceKg=priceKg.value;updateDay();updateMonth();}
+kg10min.oninput=()=>{
+  localStorage.kg10min=kg10min.value;
+  updateHour();updateDay();updateMonth();
+};
+priceKg.oninput=()=>{
+  localStorage.priceKg=priceKg.value;
+  updateDay();updateMonth();
+};
 
 updateClock();
 updateCurrent();
@@ -266,7 +281,7 @@ setInterval(updateClock,1000);
 setInterval(updateCurrent,30000);
 setInterval(updateHour,300000);
 setInterval(updateDay,900000);
-setInterval(updateMonth,3600000);
+setInterval(updateMonth,1800000);
 </script>
 
 </body>
